fix only child spacing

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -81,7 +81,10 @@
   }
 
   #__live-preview > * {
-    @apply mr-4 mb-4;
+    @apply mb-4;
+    &:not(:only-child) {
+      @apply mr-4;
+    }
   }
 
   /* start rehype-autolink-headings styles  */
